--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,8 @@
     "extends": "zt/base",
     "env": {
         "jest": true
+    },
+    "rules":{
+        "linebreak-style": ["off", "windows"]
     }
 }
