--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sql-formatter",
-  "version": "2.3.3",
-  "description": "Formats whitespaces in a SQL query to make it more readable",
+  "name": "sql-formatter-unicode",
+  "version": "2.3.4",
+  "description": "Fork from sql-formatter",
   "license": "MIT",
   "main": "lib/sqlFormatter.js",
   "keywords": [
@@ -34,10 +34,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/zeroturnaround/sql-formatter.git"
+    "url": "https://github.com/xitengfei/sql-formatter.git"
   },
   "bugs": {
-    "url": "https://github.com/zeroturnaround/sql-formatter/issues"
+    "url": "https://github.com/xitengfei/sql-formatter/issues"
   },
   "dependencies": {
     "lodash": "^4.16.0"
